--- a/index.html
+++ b/index.html
@@ -1032,6 +1032,7 @@
                                     </div><!-- end ngIf: onlineAppointment -->
 
                                     <!-- ngIf: onlineAppointment == 0 -->
+                                    <button type="submit" class="last-btn">Submit here</button>
 
                                 </div>
                             </form>
